tests/invalid/constrained_poly_insts.err_exp
constrained_poly_insts.m:007: Error: inconsistent constraints on inst variables in predicate mode declaration: p(in(_1), out(_1 =< any)).
constrained_poly_insts.m:009: Error: inconsistent constraints on inst variables in `:- pred' declaration: q(_1 :: in(_2 =< free), _1 :: out(_2 =< bound(c))).
constrained_poly_insts.m:012: Error: inconsistent constraints on inst variables in function mode declaration: r(in(_1)) = out(_1 =< free).
constrained_poly_insts.m:014: Error: inconsistent constraints on inst variables in function declaration: s(_1 :: in(_2 =< ground)) = (_1 :: out(_2 =< unique)).
constrained_poly_insts.m:023: Error: clause for predicate `constrained_poly_insts:q/2'
constrained_poly_insts.m:023:   without preceding `pred' declaration.
constrained_poly_insts.m:025: Error: clause for function `constrained_poly_insts:s/1'
constrained_poly_insts.m:025:   without preceding `func' declaration.
constrained_poly_insts.m:023: Inferred :- pred q(T1, T1).
constrained_poly_insts.m:025: Inferred :- func s(T1) = T1.
constrained_poly_insts.m:006: Error: no mode declaration for exported
constrained_poly_insts.m:006:   predicate `constrained_poly_insts:p/2'.
constrained_poly_insts.m:027: In clause for `t(in((I =< ground)), out((I =< ground)))':
constrained_poly_insts.m:027:   mode error: argument 2 became too instantiated.
constrained_poly_insts.m:027:   Final instantiatedness of `HeadVar__2' was `unique(42)',
constrained_poly_insts.m:027:   expected final instantiatedness was `(I =< ground)'.
constrained_poly_insts.m:023: Error: no mode declaration for predicate `constrained_poly_insts:q/2'.
For more information, try recompiling with `-E'.
